# cfgames-open

./: .gitignore  README.md  crontab  docker-compose.dev.yaml  docker-compose.yaml
backend/: .env.example  .gitignore  Dockerfile  athlete_prefs_2025.py  attendance_export.sql  cf_events_refresh  cf_games_refresh  firebase_db_refresh  init_affiliate_config  init_all  init_athlete_prefs  init_heats_setup  init_judges  init_preferred_athletes  manual_cf_refresh  pyproject.toml  update_scores_2024.sql  update_scores_2025.sql  update_teams.sql  update_teams_2024.sql  update_teams_2025.sql
backend/app/: exceptions.py  logger.py  main.py  manual_cf_refresh.py  settings.py
backend/app/affiliate_config/: constants.py  models.py  schemas.py  service.py  views.py
backend/app/appreciation/: models.py  schemas.py  service.py  views.py
backend/app/appreciation_score/: models.py  schemas.py  service.py  views.py
backend/app/appreciation_status/: models.py  schemas.py  views.py
backend/app/athlete/: models.py  schemas.py  service.py  views.py
backend/app/athlete_prefs/: constants.py  models.py  schemas.py  service.py  views.py
backend/app/attendance/: models.py  schemas.py  service.py  views.py
backend/app/auth/: __init__.py  core.py  dependencies.py  exceptions.py  schemas.py  service.py  views.py
backend/app/cf_games/: constants.py  models.py  schemas.py  service.py  views.py
backend/app/database/: base.py  dependencies.py  engine.py
backend/app/emailer/: core.py
backend/app/events/: models.py  (+4 more)
backend/templates/: reset_password.html  verification_email.html
(+734 files in other folders)
