[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi[all,standard]>=0.115.11",
    "firebase-admin>=6.7.0",
    "greenlet>=3.1.1",
    "httpx-limiter>=0.2.0",
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
    "sqlalchemy>=2.0.39",
]
